--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Library System</title>
+<title>The Ramaiya Library</title>
 <style>
     body {
         font-family: Arial, sans-serif;
